--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,21 +4,32 @@
 <title>Bobby Reyes | UX Designer</title>
 <link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <title>Portfolio</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+<title>Portfolio</title>
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+<%= csrf_meta_tags %>
 </head>
 <body>
 <header id="main_navigation" class="clearfix">
-	<a href="#" class="name">Bobby Reyes</a>
-	<nav>
-		<%= link_to "Articles", posts_path %>
-        <a href="#">Projects</a>
-        <a href="#">Contact</a>
-	</nav>
+	<%= link_to "Bobby Reyes", root_path, class: "name" %>
+<nav>
+	<%= link_to "Articles", posts_path %>
+    <a href="#">Projects</a>
+    <a href="#">Contact</a>
+</nav>
 </header>
+
 <%= yield %>
 
+<footer id="main_footer">
+            <p class="copyright">&copy;2015 Bobby Reyes</p>
+            <nav>
+                <a href="https://twitter.com/bobbyreys" target="_blank"><i class="fa fa-twitter"></i></a>
+                <a href="https://instagram.com/bobbyreys/" target="_blank"><i class="fa fa-instagram"></i></a>
+                <a href="https://www.linkedin.com/in/bobbyreys" target="_blank"><i class="fa fa-linkedin"></i></a>
+                <a href="https://github.com/bobbyreys" target="_blank"><i class="fa fa-github"></i></a>
+                <a href="http://www.areyouexperienced.io/" target="_blank"><i class="fa fa-camera-retro" title="photography"></i></a>
+            </nav>
+        </footer>
 </body>
 </html>
